<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPassword">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_forgotpassword" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/icon_signup"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="protected.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />


        <TextView
            android:id="@+id/resetyour_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_signup"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/reset_your_password"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ket_resetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_above="@+id/form_forgot"
        android:layout_below="@id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/masukkan_password_lama_dan_password_baru_untuk_mereset"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/form_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_lama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password_lama"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_baru"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password_baru"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToSignIn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signin_inSignUp"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold" />




    </LinearLayout>




</RelativeLayout>