<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_signup" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/icon_boom"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="boom.json"
            app:lottie_loop="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/icon_sparkle"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="sparkle.json"
            app:lottie_repeatCount="3"
            app:lottie_speed="1" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/icon_signup"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="login_protection.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />


        <TextView
            android:id="@+id/sign_up_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_signup"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/form_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/nama"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/no_hp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/no_hp"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alamat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/alamat"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/form_signup"
        android:layout_centerHorizontal="true"
        android:text="@string/signin_inSignUp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />


</RelativeLayout>