<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="300dp">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="90dp"
            android:layout_marginTop="-50dp"
            android:layout_height="90dp"
            android:layout_margin="35dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="night_moon.json"
            app:lottie_loop="true"
            app:lottie_speed="3" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="90dp"

            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="35dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="cloud.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="90dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="cloud.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />


        <ImageView
            android:id="@+id/icon_login"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:src="@drawable/icon_login" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="180dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lock.json"
            app:lottie_loop="true" />

    </RelativeLayout>


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="34dp"
        android:text="@string/login"
        android:layout_marginTop="-40dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/forgot_password"
            android:textSize="8sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sosial_accounnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with_sicial_account"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/google"
                android:layout_width="92dp"
                android:layout_height="54dp"
                android:backgroundTint="@color/white_skip"
                android:scaleType="centerCrop"
                android:src="@drawable/google" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook"
                android:layout_width="92dp"
                android:layout_height="54dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white_skip"
                android:scaleType="centerCrop" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/sign_up_login"
            android:textSize="10sp"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>